--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "antoineaugusti/laravel-sentiment-analysis",
+    "name": "mbbm-healthcare/laravel-sentiment-analysis",
     "description": "A Laravel wrapper that performs sentiment analysis over an English sentence",
     "keywords": ["laravel", "framework", "sentiment analysis", "sentiment", "analysis", "Augusti", "Antoine Augusti", "AntoineAugusti"],
     "license": "Apache-2.0",
@@ -11,7 +11,7 @@
     ],
     "require": {
         "php": ">=7.2",
-        "illuminate/support": "^6 || ^7",
+        "illuminate/support": "^6 || ^7 || ^8",
         "jwhennessey/phpinsight": "~2.0"
     },
     "require-dev": {
